[project]
name = "flow-builder-backend"
version = "0.1.0"
description = "⚡︎ FastAPI based backend for Flow Builder."
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "Chitrank Agnihoti", email = "chitrank2050@gmail.com" }]

dependencies = [
  "fastapi>=0.123.8",
  # "pydantic-settings>=2.12.0",
  # "python-dotenv>=1.2.1",
  # "sqlmodel>=0.0.27",
  # "tool>=0.8.0",
  # "uvicorn>=0.38.0",
]

[dependency-groups]
dev = ["build>=1.4.0", "ruff>=0.14.13"]

[project.scripts]
dev = "app.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
